<resources>
    <string name="app_name">79SmartDemo</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_connect">Connected</string>
    <string name="menu_reconnect">Disconnect</string>
    <string name="permission_deny">Permission Deny</string>
    <string name="scanner_subtitle_not_bonded">AVAILABLE DEVICES</string>
    <string name="scanner_subtitle_bonded">BONDED DEVICES</string>
    <string name="remove_bonded">解除绑定</string>
    <string name="no_device">NO DEVICE</string>
    <string name="upload_device">DEVICE UPGRADE</string>
    <string name="upload_device_notify">Are you sure you want to cancel the device upgrade?</string>
    <string name="device_reset">Reset</string>
    <string name="device_type">Device Type</string>
    <string name="device_sn_code">Device Code</string>
    <string name="software_version">Software Version</string>
    <string name="battery">Battery</string>
    <string name="set_target">Set Target</string>
    <string name="device_time">Device Time</string>
    <string name="software_upgrade">Software Upgrade</string>
    <string name="current_step">Current Step</string>
    <string name="sync_history_step">Sync Step</string>
    <string name="history_step">History Step</string>
    <string name="history_duration">History Duration(S)</string>
    <string name="current_sleep">Current Sleep</string>
    <string name="sleep_switch">Sleep Switch</string>
    <string name="sync_history_sleep">Sync Sleep</string>
    <string name="history_sleep">History Sleep</string>
    <string name="tel_notify_open">Open Tel Notify</string>
    <string name="new_incoming_call">New Incoming Call</string>
    <string name="new_missed_call">New Missed Call</string>
    <string name="sms_notify_open">Open SMS Notify</string>
    <string name="new_message">New Message</string>
    <string name="email_notify_open">Open Email Notify</string>
    <string name="new_email">New Email</string>
    <string name="tel_notify_close">Close Tel Notify</string>
    <string name="sms_notify_close">Close SMS Notify</string>
    <string name="email_notify_close">Close Email Notify</string>
    <string name="close">Close</string>
    <string name="sync_complete">Sync History Step Complete</string>
</resources>
