<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/blue_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:padding="10dip"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/blue_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="10dip"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="200dip">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dip" />
        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_device_type"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dip"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="@string/device_type" />

                <Button
                    android:id="@+id/btn_device_code"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dip"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="@string/device_sn_code" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_hardware_version"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dip"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="@string/software_version" />

                <Button
                    android:id="@+id/btn_hardware_battery"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dip"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="@string/battery" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#858585" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_current_step"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dip"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="@string/current_step" />

                <Button
                    android:id="@+id/btn_step_sync"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dip"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="@string/sync_history_step" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_history_step"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dip"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:onClick="onClick"
                    android:text="@string/history_step" />

                <Button
                    android:id="@+id/btn_history_duration"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dip"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:onClick="onClick"
                    android:text="@string/history_duration"
                    android:textSize="12sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#858585" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_current_sleep"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dip"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="@string/current_sleep" />

                <Button
                    android:id="@+id/btn_sleep_switch"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dip"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="@string/sleep_switch" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_sleep_sync"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dip"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="@string/sync_history_sleep" />

                <Button
                    android:id="@+id/btn_history_sleep"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_margin="5dip"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:onClick="onClick"
                    android:text="@string/history_sleep" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#858585" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_upgrade"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_margin="5dip"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="@string/upload_device" />

                <Button
                    android:id="@+id/btn_reset"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dip"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="@string/device_reset" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/dfu_upload_pb"
                style="@android:style/Widget.Holo.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>